Images: New general-purpose icons by Roland Hahn (colors, window)

--- a/images/general_purpose/IconTable.html
+++ b/images/general_purpose/IconTable.html
@@ -1311,6 +1311,15 @@
     <td><img src="Color_03_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">Color_04</td>
+    <td><img src="Color_04_16.png" loading="lazy" alt=""></td>
+    <td><img src="Color_04_24.png" loading="lazy" alt=""></td>
+    <td><img src="Color_04_32.png" loading="lazy" alt=""></td>
+    <td><img src="Color_04_36.png" loading="lazy" alt=""></td>
+    <td><img src="Color_04_48.png" loading="lazy" alt=""></td>
+    <td><img src="Color_04_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">Comment_01</td>
     <td><img src="Comment_01_16.png" loading="lazy" alt=""></td>
     <td><img src="Comment_01_24.png" loading="lazy" alt=""></td>
@@ -4173,6 +4182,15 @@
     <td><img src="Paint_02_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">Paint_03</td>
+    <td><img src="Paint_03_16.png" loading="lazy" alt=""></td>
+    <td><img src="Paint_03_24.png" loading="lazy" alt=""></td>
+    <td><img src="Paint_03_32.png" loading="lazy" alt=""></td>
+    <td><img src="Paint_03_36.png" loading="lazy" alt=""></td>
+    <td><img src="Paint_03_48.png" loading="lazy" alt=""></td>
+    <td><img src="Paint_03_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">Paperclip_01</td>
     <td><img src="Paperclip_01_16.png" loading="lazy" alt=""></td>
     <td><img src="Paperclip_01_24.png" loading="lazy" alt=""></td>
@@ -5010,6 +5028,15 @@
     <td><img src="Setup_08_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">Setup_09</td>
+    <td><img src="Setup_09_16.png" loading="lazy" alt=""></td>
+    <td><img src="Setup_09_24.png" loading="lazy" alt=""></td>
+    <td><img src="Setup_09_32.png" loading="lazy" alt=""></td>
+    <td><img src="Setup_09_36.png" loading="lazy" alt=""></td>
+    <td><img src="Setup_09_48.png" loading="lazy" alt=""></td>
+    <td><img src="Setup_09_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">share_01</td>
     <td><img src="share_01_16.png" loading="lazy" alt=""></td>
     <td><img src="share_01_24.png" loading="lazy" alt=""></td>
@@ -5170,6 +5197,15 @@
     <td><img src="Target_01_36.png" loading="lazy" alt=""></td>
     <td><img src="Target_01_48.png" loading="lazy" alt=""></td>
     <td><img src="Target_01_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Target_02</td>
+    <td><img src="Target_02_16.png" loading="lazy" alt=""></td>
+    <td><img src="Target_02_24.png" loading="lazy" alt=""></td>
+    <td><img src="Target_02_32.png" loading="lazy" alt=""></td>
+    <td><img src="Target_02_36.png" loading="lazy" alt=""></td>
+    <td><img src="Target_02_48.png" loading="lazy" alt=""></td>
+    <td><img src="Target_02_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
     <td class="right_border">Temperature_01</td>
@@ -5577,6 +5613,24 @@
     <td><img src="Window_17_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">Window_18</td>
+    <td><img src="Window_18_16.png" loading="lazy" alt=""></td>
+    <td><img src="Window_18_24.png" loading="lazy" alt=""></td>
+    <td><img src="Window_18_32.png" loading="lazy" alt=""></td>
+    <td><img src="Window_18_36.png" loading="lazy" alt=""></td>
+    <td><img src="Window_18_48.png" loading="lazy" alt=""></td>
+    <td><img src="Window_18_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Window_19</td>
+    <td><img src="Window_19_16.png" loading="lazy" alt=""></td>
+    <td><img src="Window_19_24.png" loading="lazy" alt=""></td>
+    <td><img src="Window_19_32.png" loading="lazy" alt=""></td>
+    <td><img src="Window_19_36.png" loading="lazy" alt=""></td>
+    <td><img src="Window_19_48.png" loading="lazy" alt=""></td>
+    <td><img src="Window_19_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">Zoom_01</td>
     <td><img src="Zoom_01_16.png" loading="lazy" alt=""></td>
     <td><img src="Zoom_01_24.png" loading="lazy" alt=""></td>
@@ -5641,7 +5695,7 @@
   </tr>
 </table>
 <div class="infobox colorset2">
-This folder contains 3738 icons in 623 icon groups with 6 icon sizes.
+This folder contains 3774 icons in 629 icon groups with 6 icon sizes.
 <hr>
 The images in this folder can be used in Lazarus applications as toolbar or button icons.<br>
 <br>
