Images: New "general purpose" images by Roland Hahn (export, layer, user, window)

--- a/images/general_purpose/IconTable.html
+++ b/images/general_purpose/IconTable.html
@@ -690,6 +690,15 @@
     <td><img src="Arrow_53_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">Arrow_54</td>
+    <td><img src="Arrow_54_16.png" loading="lazy" alt=""></td>
+    <td><img src="Arrow_54_24.png" loading="lazy" alt=""></td>
+    <td><img src="Arrow_54_32.png" loading="lazy" alt=""></td>
+    <td><img src="Arrow_54_36.png" loading="lazy" alt=""></td>
+    <td><img src="Arrow_54_48.png" loading="lazy" alt=""></td>
+    <td><img src="Arrow_54_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">Atom_01</td>
     <td><img src="Atom_01_16.png" loading="lazy" alt=""></td>
     <td><img src="Atom_01_24.png" loading="lazy" alt=""></td>
@@ -724,6 +733,24 @@
     <td><img src="Backward_02_36.png" loading="lazy" alt=""></td>
     <td><img src="Backward_02_48.png" loading="lazy" alt=""></td>
     <td><img src="Backward_02_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Bag_01</td>
+    <td><img src="Bag_01_16.png" loading="lazy" alt=""></td>
+    <td><img src="Bag_01_24.png" loading="lazy" alt=""></td>
+    <td><img src="Bag_01_32.png" loading="lazy" alt=""></td>
+    <td><img src="Bag_01_36.png" loading="lazy" alt=""></td>
+    <td><img src="Bag_01_48.png" loading="lazy" alt=""></td>
+    <td><img src="Bag_01_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Bag_02</td>
+    <td><img src="Bag_02_16.png" loading="lazy" alt=""></td>
+    <td><img src="Bag_02_24.png" loading="lazy" alt=""></td>
+    <td><img src="Bag_02_32.png" loading="lazy" alt=""></td>
+    <td><img src="Bag_02_36.png" loading="lazy" alt=""></td>
+    <td><img src="Bag_02_48.png" loading="lazy" alt=""></td>
+    <td><img src="Bag_02_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
     <td class="right_border">Barcode_01</td>
@@ -3246,6 +3273,42 @@
     <td><img src="Layer_03_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">Layer_04</td>
+    <td><img src="Layer_04_16.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_04_24.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_04_32.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_04_36.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_04_48.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_04_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Layer_05</td>
+    <td><img src="Layer_05_16.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_05_24.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_05_32.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_05_36.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_05_48.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_05_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Layer_06</td>
+    <td><img src="Layer_06_16.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_06_24.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_06_32.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_06_36.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_06_48.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_06_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Layer_07</td>
+    <td><img src="Layer_07_16.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_07_24.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_07_32.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_07_36.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_07_48.png" loading="lazy" alt=""></td>
+    <td><img src="Layer_07_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">Light_01</td>
     <td><img src="Light_01_16.png" loading="lazy" alt=""></td>
     <td><img src="Light_01_24.png" loading="lazy" alt=""></td>
@@ -3469,6 +3532,15 @@
     <td><img src="Map_03_36.png" loading="lazy" alt=""></td>
     <td><img src="Map_03_48.png" loading="lazy" alt=""></td>
     <td><img src="Map_03_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Map_04</td>
+    <td><img src="Map_04_16.png" loading="lazy" alt=""></td>
+    <td><img src="Map_04_24.png" loading="lazy" alt=""></td>
+    <td><img src="Map_04_32.png" loading="lazy" alt=""></td>
+    <td><img src="Map_04_36.png" loading="lazy" alt=""></td>
+    <td><img src="Map_04_48.png" loading="lazy" alt=""></td>
+    <td><img src="Map_04_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
     <td class="right_border">MapMarker_01</td>
@@ -4414,6 +4486,33 @@
     <td><img src="Play_01_36.png" loading="lazy" alt=""></td>
     <td><img src="Play_01_48.png" loading="lazy" alt=""></td>
     <td><img src="Play_01_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Plugin_01</td>
+    <td><img src="Plugin_01_16.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_01_24.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_01_32.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_01_36.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_01_48.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_01_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Plugin_02</td>
+    <td><img src="Plugin_02_16.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_02_24.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_02_32.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_02_36.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_02_48.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_02_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Plugin_03</td>
+    <td><img src="Plugin_03_16.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_03_24.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_03_32.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_03_36.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_03_48.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_03_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
     <td class="right_border">Preview_01</td>
@@ -5415,6 +5514,42 @@
     <td><img src="User_06_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">User_07</td>
+    <td><img src="User_07_16.png" loading="lazy" alt=""></td>
+    <td><img src="User_07_24.png" loading="lazy" alt=""></td>
+    <td><img src="User_07_32.png" loading="lazy" alt=""></td>
+    <td><img src="User_07_36.png" loading="lazy" alt=""></td>
+    <td><img src="User_07_48.png" loading="lazy" alt=""></td>
+    <td><img src="User_07_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">User_08</td>
+    <td><img src="User_08_16.png" loading="lazy" alt=""></td>
+    <td><img src="User_08_24.png" loading="lazy" alt=""></td>
+    <td><img src="User_08_32.png" loading="lazy" alt=""></td>
+    <td><img src="User_08_36.png" loading="lazy" alt=""></td>
+    <td><img src="User_08_48.png" loading="lazy" alt=""></td>
+    <td><img src="User_08_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">User_09</td>
+    <td><img src="User_09_16.png" loading="lazy" alt=""></td>
+    <td><img src="User_09_24.png" loading="lazy" alt=""></td>
+    <td><img src="User_09_32.png" loading="lazy" alt=""></td>
+    <td><img src="User_09_36.png" loading="lazy" alt=""></td>
+    <td><img src="User_09_48.png" loading="lazy" alt=""></td>
+    <td><img src="User_09_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">User_10</td>
+    <td><img src="User_10_16.png" loading="lazy" alt=""></td>
+    <td><img src="User_10_24.png" loading="lazy" alt=""></td>
+    <td><img src="User_10_32.png" loading="lazy" alt=""></td>
+    <td><img src="User_10_36.png" loading="lazy" alt=""></td>
+    <td><img src="User_10_48.png" loading="lazy" alt=""></td>
+    <td><img src="User_10_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">Warning_01</td>
     <td><img src="Warning_01_16.png" loading="lazy" alt=""></td>
     <td><img src="Warning_01_24.png" loading="lazy" alt=""></td>
@@ -5695,7 +5830,7 @@
   </tr>
 </table>
 <div class="infobox colorset2">
-This folder contains 3774 icons in 629 icon groups with 6 icon sizes.
+This folder contains 3864 icons in 644 icon groups with 6 icon sizes.
 <hr>
 The images in this folder can be used in Lazarus applications as toolbar or button icons.<br>
 <br>
