Images: New general-purpose icons (color, package, paint, plugin, target) by Roland Hahn.

--- a/images/general_purpose/IconTable.html
+++ b/images/general_purpose/IconTable.html
@@ -4245,6 +4245,15 @@
     <td><img src="Package_01_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">Package_02</td>
+    <td><img src="Package_02_16.png" loading="lazy" alt=""></td>
+    <td><img src="Package_02_24.png" loading="lazy" alt=""></td>
+    <td><img src="Package_02_32.png" loading="lazy" alt=""></td>
+    <td><img src="Package_02_36.png" loading="lazy" alt=""></td>
+    <td><img src="Package_02_48.png" loading="lazy" alt=""></td>
+    <td><img src="Package_02_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">Paint_01</td>
     <td><img src="Paint_01_16.png" loading="lazy" alt=""></td>
     <td><img src="Paint_01_24.png" loading="lazy" alt=""></td>
@@ -4522,6 +4531,24 @@
     <td><img src="Plugin_03_36.png" loading="lazy" alt=""></td>
     <td><img src="Plugin_03_48.png" loading="lazy" alt=""></td>
     <td><img src="Plugin_03_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Plugin_04</td>
+    <td><img src="Plugin_04_16.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_04_24.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_04_32.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_04_36.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_04_48.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_04_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Plugin_05</td>
+    <td><img src="Plugin_05_16.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_05_24.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_05_32.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_05_36.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_05_48.png" loading="lazy" alt=""></td>
+    <td><img src="Plugin_05_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
     <td class="right_border">Preview_01</td>
@@ -5839,7 +5866,7 @@
   </tr>
 </table>
 <div class="infobox colorset2">
-This folder contains 3870 icons in 645 icon groups with 6 icon sizes.
+This folder contains 3888 icons in 648 icon groups with 6 icon sizes.
 <hr>
 The images in this folder can be used in Lazarus applications as toolbar or button icons.<br>
 <br>
