Images: Some more general-purpose icons by Roland Hahn (chip, folder, user-overlay).

--- a/images/general_purpose/IconTable.html
+++ b/images/general_purpose/IconTable.html
@@ -1176,6 +1176,15 @@
     <td><img src="Chip_01_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">Chip_02</td>
+    <td><img src="Chip_02_16.png" loading="lazy" alt=""></td>
+    <td><img src="Chip_02_24.png" loading="lazy" alt=""></td>
+    <td><img src="Chip_02_32.png" loading="lazy" alt=""></td>
+    <td><img src="Chip_02_36.png" loading="lazy" alt=""></td>
+    <td><img src="Chip_02_48.png" loading="lazy" alt=""></td>
+    <td><img src="Chip_02_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">Circle_01</td>
     <td><img src="Circle_01_16.png" loading="lazy" alt=""></td>
     <td><img src="Circle_01_24.png" loading="lazy" alt=""></td>
@@ -2569,6 +2578,24 @@
     <td><img src="Folder_21_36.png" loading="lazy" alt=""></td>
     <td><img src="Folder_21_48.png" loading="lazy" alt=""></td>
     <td><img src="Folder_21_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Folder_22</td>
+    <td><img src="Folder_22_016.png" loading="lazy" alt=""></td>
+    <td><img src="Folder_22_024.png" loading="lazy" alt=""></td>
+    <td><img src="Folder_22_032.png" loading="lazy" alt=""></td>
+    <td><img src="Folder_22_036.png" loading="lazy" alt=""></td>
+    <td><img src="Folder_22_048.png" loading="lazy" alt=""></td>
+    <td><img src="Folder_22_064.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Folder_23</td>
+    <td><img src="Folder_23_016.png" loading="lazy" alt=""></td>
+    <td><img src="Folder_23_024.png" loading="lazy" alt=""></td>
+    <td><img src="Folder_23_032.png" loading="lazy" alt=""></td>
+    <td><img src="Folder_23_036.png" loading="lazy" alt=""></td>
+    <td><img src="Folder_23_048.png" loading="lazy" alt=""></td>
+    <td><img src="Folder_23_064.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
     <td class="right_border">Font_01</td>
@@ -4335,6 +4362,15 @@
     <td><img src="ovl_Time_01_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">ovl_User_01</td>
+    <td><img src="ovl_User_01_016.png" loading="lazy" alt=""></td>
+    <td><img src="ovl_User_01_024.png" loading="lazy" alt=""></td>
+    <td><img src="ovl_User_01_032.png" loading="lazy" alt=""></td>
+    <td><img src="ovl_User_01_036.png" loading="lazy" alt=""></td>
+    <td><img src="ovl_User_01_048.png" loading="lazy" alt=""></td>
+    <td><img src="ovl_User_01_064.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">ovl_Wrench_01</td>
     <td><img src="ovl_Wrench_01_16.png" loading="lazy" alt=""></td>
     <td><img src="ovl_Wrench_01_24.png" loading="lazy" alt=""></td>
@@ -5280,6 +5316,15 @@
     <td><img src="Setup_08_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">Setup_09</td>
+    <td><img src="Setup_09_16.png" loading="lazy" alt=""></td>
+    <td><img src="Setup_09_24.png" loading="lazy" alt=""></td>
+    <td><img src="Setup_09_32.png" loading="lazy" alt=""></td>
+    <td><img src="Setup_09_36.png" loading="lazy" alt=""></td>
+    <td><img src="Setup_09_48.png" loading="lazy" alt=""></td>
+    <td><img src="Setup_09_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">share_01</td>
     <td><img src="share_01_16.png" loading="lazy" alt=""></td>
     <td><img src="share_01_24.png" loading="lazy" alt=""></td>
@@ -6028,21 +6073,7 @@
   </tr>
 </table>
 <div class="infobox colorset2">
-This folder contains 3996 icons in 666 icon groups with 6 icon sizes.
-<hr>
-The images in this folder can be used in Lazarus applications as toolbar or button icons.<br>
-<br>
-The different sizes as required by LCL scaling for high-dpi screens can be used like this, for example:<br>
-<br>
-- 16x16, 24x24 and 32x32 pixels for "small" images, and<br>
-- 24x24, 36x36 and 48x48 pixels for "medium" sized images, and<br>
-- 32x32, 48x48 and 64x64 pixels for "large" images.<br>
-<br>
-The images were kindly provided by Roland Hahn (https://www.rhsoft.de/).<br>
-<br>
-License: Creative Commons CC0 1.0 Universal<br>
-https://creativecommons.org/publicdomain/zero/1.0/<br>
-(freely available, no restrictions in usage)<br>
+This folder contains 4026 icons in 671 icon groups with 6 icon sizes.
 </div>
 </body>
 </html>
