Images: New general-purpose icons by Roland Hahn (bicycle, flag)

--- a/images/general_purpose/IconTable.html
+++ b/images/general_purpose/IconTable.html
@@ -789,6 +789,15 @@
     <td><img src="Bell_03_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">Bicycle_01</td>
+    <td><img src="Bicycle_01_016.png" loading="lazy" alt=""></td>
+    <td><img src="Bicycle_01_024.png" loading="lazy" alt=""></td>
+    <td><img src="Bicycle_01_032.png" loading="lazy" alt=""></td>
+    <td><img src="Bicycle_01_036.png" loading="lazy" alt=""></td>
+    <td><img src="Bicycle_01_048.png" loading="lazy" alt=""></td>
+    <td><img src="Bicycle_01_064.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">Bluetooth_01</td>
     <td><img src="Bluetooth_01_16.png" loading="lazy" alt=""></td>
     <td><img src="Bluetooth_01_24.png" loading="lazy" alt=""></td>
@@ -2317,6 +2326,24 @@
     <td><img src="Flag_04_36.png" loading="lazy" alt=""></td>
     <td><img src="Flag_04_48.png" loading="lazy" alt=""></td>
     <td><img src="Flag_04_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Flag_05</td>
+    <td><img src="Flag_05_16.png" loading="lazy" alt=""></td>
+    <td><img src="Flag_05_024.png" loading="lazy" alt=""></td>
+    <td><img src="Flag_05_032.png" loading="lazy" alt=""></td>
+    <td><img src="Flag_05_036.png" loading="lazy" alt=""></td>
+    <td><img src="Flag_05_048.png" loading="lazy" alt=""></td>
+    <td><img src="Flag_05_064.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Flag_06</td>
+    <td><img src="Flag_06_16.png" loading="lazy" alt=""></td>
+    <td><img src="Flag_06_024.png" loading="lazy" alt=""></td>
+    <td><img src="Flag_06_032.png" loading="lazy" alt=""></td>
+    <td><img src="Flag_06_036.png" loading="lazy" alt=""></td>
+    <td><img src="Flag_06_048.png" loading="lazy" alt=""></td>
+    <td><img src="Flag_06_064.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
     <td class="right_border">Flame_01</td>
@@ -6073,7 +6100,7 @@
   </tr>
 </table>
 <div class="infobox colorset2">
-This folder contains 4026 icons in 671 icon groups with 6 icon sizes.
+This folder contains 4044 icons in 674 icon groups with 6 icon sizes.
 </div>
 </body>
 </html>
