Images: Add updates of Icontable and metadata for IconFinder

--- a/images/general_purpose/IconTable.html
+++ b/images/general_purpose/IconTable.html
@@ -987,6 +987,24 @@
     <td><img src="Car_01_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">Car_02</td>
+    <td><img src="Car_02_16.png" loading="lazy" alt=""></td>
+    <td><img src="Car_02_24.png" loading="lazy" alt=""></td>
+    <td><img src="Car_02_32.png" loading="lazy" alt=""></td>
+    <td><img src="Car_02_36.png" loading="lazy" alt=""></td>
+    <td><img src="Car_02_48.png" loading="lazy" alt=""></td>
+    <td><img src="Car_02_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Car_03</td>
+    <td><img src="Car_03_016.png" loading="lazy" alt=""></td>
+    <td><img src="Car_03_024.png" loading="lazy" alt=""></td>
+    <td><img src="Car_03_032.png" loading="lazy" alt=""></td>
+    <td><img src="Car_03_036.png" loading="lazy" alt=""></td>
+    <td><img src="Car_03_048.png" loading="lazy" alt=""></td>
+    <td><img src="Car_03_064.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">Charge_01</td>
     <td><img src="Charge_01_16.png" loading="lazy" alt=""></td>
     <td><img src="Charge_01_24.png" loading="lazy" alt=""></td>
@@ -1309,6 +1327,15 @@
     <td><img src="Cloud_10_36.png" loading="lazy" alt=""></td>
     <td><img src="Cloud_10_48.png" loading="lazy" alt=""></td>
     <td><img src="Cloud_10_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Cloud_11</td>
+    <td><img src="Cloud_11_16.png" loading="lazy" alt=""></td>
+    <td><img src="Cloud_11_24.png" loading="lazy" alt=""></td>
+    <td><img src="Cloud_11_32.png" loading="lazy" alt=""></td>
+    <td><img src="Cloud_11_36.png" loading="lazy" alt=""></td>
+    <td><img src="Cloud_11_48.png" loading="lazy" alt=""></td>
+    <td><img src="Cloud_11_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
     <td class="right_border">Code_01</td>
@@ -4524,6 +4551,15 @@
     <td><img src="Pause_01_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">Pedestrian_01</td>
+    <td><img src="Pedestrian_01_16.png" loading="lazy" alt=""></td>
+    <td><img src="Pedestrian_01_24.png" loading="lazy" alt=""></td>
+    <td><img src="Pedestrian_01_32.png" loading="lazy" alt=""></td>
+    <td><img src="Pedestrian_01_36.png" loading="lazy" alt=""></td>
+    <td><img src="Pedestrian_01_48.png" loading="lazy" alt=""></td>
+    <td><img src="Pedestrian_01_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">Phone_01</td>
     <td><img src="Phone_01_16.png" loading="lazy" alt=""></td>
     <td><img src="Phone_01_24.png" loading="lazy" alt=""></td>
@@ -5487,6 +5523,15 @@
     <td><img src="Sound_08_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
+    <td class="right_border">Sound_09</td>
+    <td><img src="Sound_09_016.png" loading="lazy" alt=""></td>
+    <td><img src="Sound_09_024.png" loading="lazy" alt=""></td>
+    <td><img src="Sound_09_032.png" loading="lazy" alt=""></td>
+    <td><img src="Sound_09_036.png" loading="lazy" alt=""></td>
+    <td><img src="Sound_09_048.png" loading="lazy" alt=""></td>
+    <td><img src="Sound_09_064.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
     <td class="right_border">Star_01</td>
     <td><img src="Star_01_16.png" loading="lazy" alt=""></td>
     <td><img src="Star_01_24.png" loading="lazy" alt=""></td>
@@ -5674,6 +5719,33 @@
     <td><img src="Time_14_36.png" loading="lazy" alt=""></td>
     <td><img src="Time_14_48.png" loading="lazy" alt=""></td>
     <td><img src="Time_14_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Traffic_01</td>
+    <td><img src="Traffic_01_16.png" loading="lazy" alt=""></td>
+    <td><img src="Traffic_01_24.png" loading="lazy" alt=""></td>
+    <td><img src="Traffic_01_32.png" loading="lazy" alt=""></td>
+    <td><img src="Traffic_01_36.png" loading="lazy" alt=""></td>
+    <td><img src="Traffic_01_48.png" loading="lazy" alt=""></td>
+    <td><img src="Traffic_01_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Traffic_02</td>
+    <td><img src="Traffic_02_16.png" loading="lazy" alt=""></td>
+    <td><img src="Traffic_02_24.png" loading="lazy" alt=""></td>
+    <td><img src="Traffic_02_32.png" loading="lazy" alt=""></td>
+    <td><img src="Traffic_02_36.png" loading="lazy" alt=""></td>
+    <td><img src="Traffic_02_48.png" loading="lazy" alt=""></td>
+    <td><img src="Traffic_02_64.png" loading="lazy" alt=""></td>
+  </tr>
+  <tr>
+    <td class="right_border">Train_01</td>
+    <td><img src="Train_01_16.png" loading="lazy" alt=""></td>
+    <td><img src="Train_01_24.png" loading="lazy" alt=""></td>
+    <td><img src="Train_01_32.png" loading="lazy" alt=""></td>
+    <td><img src="Train_01_36.png" loading="lazy" alt=""></td>
+    <td><img src="Train_01_48.png" loading="lazy" alt=""></td>
+    <td><img src="Train_01_64.png" loading="lazy" alt=""></td>
   </tr>
   <tr>
     <td class="right_border">Undo_01</td>
@@ -6100,7 +6172,7 @@
   </tr>
 </table>
 <div class="infobox colorset2">
-This folder contains 4044 icons in 674 icon groups with 6 icon sizes.
+This folder contains 4092 icons in 682 icon groups with 6 icon sizes.
 </div>
 </body>
 </html>
